--- a/markup/index.html
+++ b/markup/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="normalize.css">
     <title>Вагапова Динара Рустамовна</title>
 </head>
@@ -15,7 +15,7 @@
         <section class="new_exercise">
             <label>Новая задача</label>
             <div>
-                <input id="task_name" name="taskName" type="text" placeholder="Название задачи...">
+                <input id="task_name" name="taskName" type="text" placeholder="Название задачи">
                 <button id="add_button" type="submit">+ Добавить</button>
             </div>
         </section>
@@ -34,7 +34,7 @@
             <ul id="ready">
                 <div id="ready_title">Готово</div>
                 <li>Позвонить маме</li>
-                <li>Погладить кота</li>
+                <li>Погадить кота</li>
             </ul>
                 
             <ul id="basket">
