--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./css/style.css">
   <title>Список задач</title>
 </head>
 
@@ -16,15 +16,12 @@
   <main class="board-app__main">
     <div class="board-app__inner">
       <section class="add-task">
-
-
       </section>
-      <section class="tasks">
-
-
+      
+      <section class="taskboard">
       </section>
     </div>
   </main>
-  <script src="src/main.js" type="module"></script>
+  <script src="./src/main.js" type="module"></script>
 </body>
 </html>
